[package]
name = "package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
reqwest = { version = "0.11.13", features = ["blocking"] }
flate2 = "1.0.25"
tar = "0.4.38"
num_cpus = "1.14.0"
log = "0.4.17"
simple_logger = "4.0.0"
walkdir = "2.3.2"
clap = { version = "4.0.29", features = ["derive"] }
tempdir = "0.3.7"
