[package]
name = "xltools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
russh = "0.34.0"
derive_builder = "0.12.0"
macaddr = "1.0.1"
serde_json = "1.0.89"
serde = { version = "1.0.149", features = ["derive"] }
log = "0.4.17"
simple_logger = "4.0.0"
nix = "0.26.1"

# The following Xen libraries are available from Wenzel
# xenstore-rs
# xenstore-sys
# xenforeginmemory
# xenforeignmemory-sys
# xenevtchn
# xenevtchn-sys
# xenvmevent-sys
# xenctrl
