[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
reqwest = { version = "0.11.13", features = ["blocking"] }
flate2 = "1.0.25"
tar = "0.4.38"
num_cpus = "1.14.0"
